force-app/main/default/objects/License_Type__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>License Types</relationshipLabel>
    <relationshipName>License_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>