force-app/main/default/objects/License_Type__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policies &amp; Procedures</fullName>
            </value>
            <value>
                <fullName>Examples of KYC packs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>