force-app/main/default/objects/License_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML/KYC policy</fullName>
            </value>
            <value>
                <fullName>CDD procedure</fullName>
            </value>
            <value>
                <fullName>Sanction/PEP screening policy</fullName>
            </value>
            <value>
                <fullName>Transaction Monitoring policy</fullName>
            </value>
            <value>
                <fullName>Risk Appetite Statement</fullName>
            </value>
            <value>
                <fullName>EWRA</fullName>
            </value>
            <value>
                <fullName>Compliance Audit Report</fullName>
            </value>
            <value>
                <fullName>CV of Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Organizational Structure</fullName>
            </value>
            <value>
                <fullName>Agreement with KYC vendor</fullName>
            </value>
            <value>
                <fullName>Agreement with Sanction Screening vendor</fullName>
            </value>
            <value>
                <fullName>Agreement with Crypto Transaction Monitoring vendor</fullName>
            </value>
            <value>
                <fullName>Full List of available Cryptocurrencies</fullName>
            </value>
            <value>
                <fullName>Agreement with Liquidity provider (if Applicable)</fullName>
            </value>
            <value>
                <fullName>Business Plan (for start ups)</fullName>
            </value>
            <value>
                <fullName>Disclaimer within the website about age limits, human trafficking, escorting and prostitution prevention</fullName>
            </value>
            <value>
                <fullName>Agreement with the main partners</fullName>
            </value>
            <value>
                <fullName>Proof of Insurance</fullName>
            </value>
            <value>
                <fullName>Content Monitoring policy/procedure</fullName>
            </value>
            <value>
                <fullName>Policy about age limits, human trafficking, child pornography, escorting and prostitution prevention</fullName>
            </value>
            <value>
                <fullName>1 Example</fullName>
            </value>
            <value>
                <fullName>2 Example</fullName>
            </value>
            <value>
                <fullName>3 Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>